2013-07-10  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2013-07-10 trunk r200870.
	
	PR target/57506
	* config/avr/avr-mcus.def (atmega16hva, atmega16hva2, atmega16hvb)
	(atmega16m1, atmega16u4, atmega32a, atmega32c1, atmega32hvb)
	(atmega32m1, atmega32u4, atmega32u6, atmega64c1, atmega64m1):
	Remove duplicate devices.
	* config/avr/gen-avr-mmcu-texi.c (print_mcus): Fail on duplicate MCUs.
	* config/avr/t-multilib: Regenerate.
	* config/avr/avr-tables.opt: Regenerate.
	* doc/avr-mmcu.texi: Regenerate.

2013-07-10  Georg-Johann Lay  <avr@gjlay.de>

	PR target/56987
	* config/avr/avr.opt (Waddr-space-convert): Fix typo.

2013-07-09  Joseph Myers  <joseph@codesourcery.com>

	* config/rs6000/rs6000.c (rs6000_init_hard_regno_mode_ok): Only
	adjust register size for TDmode and TFmode for VSX registers.

2013-07-08  Kai Tietz  <ktietz@redhat.com>

	Backport from mainline
	PR target/56892
	* config/i386/i386.c (TARGET_FUNCTION_ATTRIBUTE_INLINABLE_P): Define as
	hook_bool_const_tree_true.

2013-07-08  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-07-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/driver-i386.c (host_detect_local_cpu): Do not check
	signature_TM2_ebx, it interferes with signature_INTEL_ebx.

	Backport from mainline
	2013-07-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (sse_movlhps): Change alternative 3
	of operand 2 to "m".

2013-07-08  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.in (tree-ssa-reassoc.o): Add dependency on $(PARAMS_H).

2013-07-08  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/57829
	* simplify-rtx.c (simplify_binary_operation_1) <case IOR>: Ensure that
	mask bits outside of mode are just sign-extension from mode to HWI.

2013-07-03  Jakub Jelinek  <jakub@redhat.com>

	PR target/57777
	* config/i386/predicates.md (vsib_address_operand): Disallow
	SYMBOL_REF or LABEL_REF in parts.disp if TARGET_64BIT && flag_pic.

2013-06-30  Terry Guo  <terry.guo@arm.com>

	Backport from mainline